--- a/src/css/login.css
+++ b/src/css/login.css
@@ -9,6 +9,8 @@
     color:white;
     background-color: #183263;
     padding:1em;
+    margin-left: 0;
+    display:inline-block;
 }
 
 #loginForm {
@@ -18,6 +20,8 @@
     color:white;
     background-color: #183263;
     padding:1em;
+    margin-right:0;
+    float:none;
 }
 
 #loginTitle, #signUpTitle {
@@ -47,6 +51,10 @@ fieldset {
     left:-3.25em;
 }
 
+#forms {
+    width: 90%;
+}
+
 #SUfnameLabel, #SUlnameLabel {
     position:relative;
     left: -3em;
@@ -59,4 +67,16 @@ fieldset {
 
 .SUformElement {
     padding:0.5em;
+}
+
+#forms {
+    display:flex;
+    flex-direction:row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-content: center;
+}
+
+#forms >* {
+    flex-basis:40%;
 }
